--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,16 +1,23 @@
-body{
+body {
     margin: 0 auto;
     padding: 0 auto;
     display: block;
-    --background-color:rgb(21, 32, 43);
+    --background-color: rgb(21, 32, 43);
 }
 
-body,section{
+body,
+section {
     background-color: rgb(21, 32, 43);
 
 }
 
-.header-container{
+header{
+    position: sticky;
+    top: 0;
+    z-index: 99;
+}
+
+.header-container {
     background-color: black;
     display: flex;
     align-items: center;
@@ -18,18 +25,19 @@ body,section{
     padding: 1em;
 }
 
-.header-container i, .header-container svg{
+.header-container i,
+.header-container svg {
     color: white;
     fill: white;
 }
 
-.header-container form{
+.header-container form {
     display: flex;
     align-items: center;
     gap: 8px;
 }
 
-.header-input{
+.header-input {
     padding: 7px;
     color: black;
     border-radius: 14px;
@@ -40,18 +48,18 @@ body,section{
     font-weight: 500;
 }
 
-.icons-container{
+.icons-container {
     display: flex;
     align-items: center;
     gap: 1.5em;
 }
 
-.carrito-container{
+.carrito-container {
     position: relative;
     width: 30px;
 }
 
-.carrito-items{
+.carrito-items {
     width: 15px;
     height: 15px;
     background-color: red;
@@ -65,24 +73,24 @@ body,section{
     align-items: center;
 }
 
-.carrito-items span{
+.carrito-items span {
     font-family: 'Open Sans', sans-serif;
     font-size: 10px;
     font-weight: bold;
 }
 
-.header-logo{
+.header-logo {
     width: 120px;
     height: auto;
 }
 
-.nav-container{
+.nav-container {
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
     font-weight: 600;
 }
 
-.nav-container ul{
+.nav-container ul {
     background-color: black;
     display: flex;
     justify-content: center;
@@ -90,12 +98,14 @@ body,section{
     gap: 2em;
     margin: 0 auto;
     padding: 1em;
+    transition: all .3s ease-in-out;
 }
 
-.nav-container a{
+.nav-container a {
     color: white;
     text-decoration: none;
     list-style: none;
+    transition: all .3s ease-in-out;
 }
 
 /* Estilos del menu del perfil */
@@ -111,38 +121,49 @@ body,section{
     border-radius: 5px;
     z-index: 1;
 }
+
 .opciones-menu a {
     display: block;
     text-decoration: none;
     color: #333;
     padding: 5px 0;
 }
+
 .opciones-menu a:hover {
     background-color: #ddd;
 }
 
-.slider-container{
-    padding-top: 3em;
-    padding-bottom: 3em;
+/*estilos de slider*/
+
+.slider {
+    overflow: hidden;
 }
 
-.slider-content{
-    width: 90%;
+.slider-inner {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    transition: all .3s ease-in-out;
     margin: 0 auto;
 }
 
-.product-section{
+.slider-inner img {
+    width: 100%;
+}
+
+
+.product-section {
     height: 38rem;
     padding-top: 3em;
     padding-bottom: 3em;
 }
 
-.product-container{
+.product-container {
     display: flex;
     justify-content: space-evenly;
 }
 
-.product-section h2{
+.product-section h2 {
     font-size: 34px;
     font-weight: 700;
     font-family: 'Open Sans', sans-serif;
@@ -153,7 +174,7 @@ body,section{
     justify-content: center;
 }
 
-.product-section-description{
+.product-section-description {
     margin-bottom: 4em;
     font-size: 20px;
     font-weight: 300;
@@ -163,7 +184,7 @@ body,section{
     font-family: 'Open Sans', sans-serif;
 }
 
-.product-card{
+.product-card {
     width: 220px;
     height: 310px;
     background-color: white;
@@ -174,13 +195,13 @@ body,section{
     font-family: 'Roboto', sans-serif;
 }
 
-.product-image-container{
+.product-image-container {
     height: 47%;
     background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
     overflow: hidden;
 }
 
-.product-card img{
+.product-card img {
     display: flex;
     margin: 0 auto;
     width: 80%;
@@ -188,11 +209,12 @@ body,section{
     filter: drop-shadow(0 0 10px #000);
 }
 
-.product-details{
+.product-details {
     height: 53%;
     overflow: hidden;
 }
-.product-details h3{
+
+.product-details h3 {
     height: 29%;
     margin: 0 auto;
     font-size: 18px;
@@ -201,25 +223,30 @@ body,section{
     width: 90%;
     color: #4f4f4f;
 }
-.product-details p{
+
+.product-details p {
     color: #333;
     margin: 0;
     padding-left: .5em;
 }
-.product-description{
+
+.product-description {
     height: 30%;
     overflow: hidden;
     font-size: 14px;
 }
-.product-price{
+
+.product-price {
     height: 16%;
     font-weight: bold;
     font-size: 17px;
 }
-.product-btn{
+
+.product-btn {
     height: 25%;
 }
-.product-btn button{
+
+.product-btn button {
     height: 100%;
     width: 100%;
     background-color: #007BFF;
@@ -288,7 +315,7 @@ body,section{
     font-size: 15px;
 } */
 
-.slogan-container{
+.slogan-container {
     position: relative;
     display: flex;
     justify-content: center;
@@ -303,7 +330,7 @@ body,section{
     background-size: cover;
 }
 
-.slogan-container::before{
+.slogan-container::before {
     content: "";
     position: absolute;
     top: 0;
@@ -314,7 +341,7 @@ body,section{
     z-index: 0;
 }
 
-.slogan-container p{
+.slogan-container p {
     position: relative;
     font-size: 25px;
     font-family: 'Roboto', sans-serif;
@@ -326,39 +353,39 @@ body,section{
     z-index: 1;
 }
 
-.slogan-container p:nth-child(1){
+.slogan-container p:nth-child(1) {
     font-size: 35px;
 
 }
 
-.category-section{
+.category-section {
     height: 30rem;
 }
 
-.category-container{
+.category-container {
     display: flex;
     justify-content: space-evenly;
     padding-top: 4em;
 }
 
-.category-card{
+.category-card {
     position: relative;
     width: 300px;
     height: 340px;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background: rgb(255,69,182);
-    background: linear-gradient(164deg, rgba(255,69,182,1) 15%, rgba(202,93,128,1) 54%, rgba(45,116,221,1) 89%);
+    background: rgb(255, 69, 182);
+    background: linear-gradient(164deg, rgba(255, 69, 182, 1) 15%, rgba(202, 93, 128, 1) 54%, rgba(45, 116, 221, 1) 89%);
     overflow: hidden;
     transition: all .5s ease-in-out;
 }
 
-.category-card::before{
+.category-card::before {
     content: "";
     position: absolute;
     width: 100%;
@@ -367,22 +394,22 @@ body,section{
     z-index: 0;
 }
 
-.category-card:hover{
-    box-shadow: 0px 0px 24px 5px rgba(255,255,255,0.75);
+.category-card:hover {
+    box-shadow: 0px 0px 24px 5px rgba(255, 255, 255, 0.75);
 }
 
-.category-image{
+.category-image {
     position: relative;
     z-index: 1;
     transition: all .5s ease-in-out;
     width: -webkit-fill-available;
 }
 
-.category-image:hover{
+.category-image:hover {
     scale: 1.1;
 }
 
-.category-title{
+.category-title {
     position: relative;
     display: flex;
     justify-content: center;
@@ -393,7 +420,7 @@ body,section{
     font-family: 'Open Sans', sans-serif;
 }
 
-.category-title h4{
+.category-title h4 {
     color: white;
     font-size: 17px;
     text-align: center;
@@ -401,7 +428,7 @@ body,section{
     margin: 0;
 }
 
-.contact-text-container{
+.contact-text-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -409,26 +436,33 @@ body,section{
     height: 10rem;
     padding: 2em;
     background-color: var(--background-color);
-}
-
-.contact-text-container p{
-    font-size: 25px;
     font-family: 'Roboto', sans-serif;
-    font-weight: 500;
     color: white;
 }
 
-.contact-section{
+.contact-text-container .contact-text {
+    font-size: 35px;
+    font-weight: 600;
+    margin-bottom: .5em;
+}
+
+.contact-text-container p:nth-child(2) {
+    font-size: 25px;
+    font-weight: 500;
+    margin-top: .5em;
+}
+
+.contact-section {
     height: 34rem;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    margin-top: 1em;
 }
 
-.contact-form-container{
+.contact-form-container {
     background-color: white;
     padding: 2em;
-    height: 465px;
     border-radius: 15px;
     font-family: 'Open Sans', sans-serif;
 }
@@ -441,16 +475,21 @@ body,section{
     margin: 0 auto;
 }
 
-.form-wrapper h3{
-    margin-bottom: 1em;
+.form-wrapper h3 {
+    margin-bottom: 2rem;
+    margin-top: 0;
+    font-size: 22px;
+    color: #004a98;
 }
+
 .input-group {
     position: relative;
     margin-bottom: 1rem;
 }
+
 .input-field,
 .textarea-field {
-    width: 100%;
+    width: 96%;
     padding: 0.5rem;
     border: 1px solid #ced4da;
     border-radius: 4px;
@@ -459,11 +498,13 @@ body,section{
     background-color: #fff;
     transition: border-color 0.3s;
 }
+
 .input-field:focus,
 .textarea-field:focus {
     border-color: #007bff;
 }
-.input-label{
+
+.input-label {
     position: absolute;
     top: 0.75rem;
     left: 0.75rem;
@@ -472,10 +513,11 @@ body,section{
     pointer-events: none;
     transition: all 0.3s;
 }
-.input-field:focus + .input-label,
-.input-field:not(:placeholder-shown) + .input-label,
-.textarea-field:focus + .input-label,
-.textarea-field:not(:placeholder-shown) + .input-label {
+
+.input-field:focus+.input-label,
+.input-field:not(:placeholder-shown)+.input-label,
+.textarea-field:focus+.input-label,
+.textarea-field:not(:placeholder-shown)+.input-label {
     top: -0.75rem;
     left: 0.75rem;
     font-size: 0.75rem;
@@ -483,15 +525,18 @@ body,section{
     background-color: #fff;
     padding: 0 0.25rem;
 }
+
 .checkbox-group {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 1rem;
 }
+
 .checkbox-input {
     margin-right: 0.5rem;
 }
+
 .submit-btn {
     display: block;
     width: 100%;
@@ -505,6 +550,7 @@ body,section{
     text-align: center;
     transition: background-color 0.3s;
 }
+
 .submit-btn:hover {
     background-color: #0056b3;
 }
@@ -512,7 +558,7 @@ body,section{
 
 
 
-.contact-data{
+.contact-data {
     display: flex;
     flex-direction: column;
     color: black;
@@ -520,34 +566,34 @@ body,section{
     padding-bottom: 2em;
 }
 
-.contact-data span{
+.contact-data span {
     font-weight: bold;
     text-align: start;
     font-size: 20px;
     color: white;
 }
 
-.contact-data p{
+.contact-data p {
     text-align: start;
     font-size: 18px;
     margin-bottom: 2em;
     color: white;
 }
 
-.contact-redes{
+.contact-redes {
     display: flex;
     justify-content: space-around;
 }
 
-.contact-redes svg{
+.contact-redes svg {
     fill: white;
 }
 
-.disable{
+.disable {
     display: none;
 }
 
-.hidden{
+.hidden {
     transition: opacity 5s ease-in-out;
     display: none;
 }
