--- a/public/css/carrito.css
+++ b/public/css/carrito.css
@@ -1,3 +1,28 @@
+.menu-categorias:hover .menu-categorias-ul{
+    display: block;
+}
+
+.menu-categorias-ul{
+    display: none;
+    position: absolute;
+    padding: 0;
+    padding-top: .9em;
+    transform: translateX(-35%);
+}
+
+.menu-categorias-container{
+    display: flex;
+    justify-content: space-between;
+    width: 27em;
+}
+
+.categoria-item{
+    list-style: none;
+    text-transform: capitalize;
+    font-size: 15px;
+}
+
+
 .productos-section{
     display: flex;
     justify-content: space-around;
@@ -62,6 +87,7 @@
 
 .carrito-item-titulo{
     font-weight: 600;
+    text-align: center;
 }
 
 .selector-cantidad{
