--- a/public/css/nosotros.css
+++ b/public/css/nosotros.css
@@ -1,18 +1,45 @@
 
+
+
+.menu-categorias:hover .menu-categorias-ul{
+    display: block;
+}
+
+.menu-categorias-ul{
+    display: none;
+    position: absolute;
+    padding: 0;
+    padding-top: .9em;
+    transform: translateX(-35%);
+}
+
+.menu-categorias-container{
+    display: flex;
+    justify-content: space-between;
+    width: 27em;
+}
+
+.categoria-item{
+    list-style: none;
+    text-transform: capitalize;
+    font-size: 15px;
+}
+
+
 .nosotros-container{
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: 'Open Sans', sans-serif;
-    padding: 4em 0;
-    height: 20em;
+    padding: 1em 0 4em 0;
+    height: 18em;
     justify-content: center;
 }
 
 .nosotros-container h1{
-    color: white;
-    font-size: 32px;
-    font-weight: 600;
+    color: #d0e6eb;
+    font-size: 35px;
+    font-weight: 700;
     text-transform: uppercase;
 }
 
