--- a/public/css/nosotros.css
+++ b/public/css/nosotros.css
@@ -97,6 +97,8 @@
     justify-content: space-evenly;
     margin: 2em 0;
     flex-wrap: wrap;
+    gap: 1em;
+    padding: 0 2em 0 2em;
 }
 
 /*Estilos cards*/ 
